:pushpin: Estrutura do WidgetForm

--- a/web/src/global.css
+++ b/web/src/global.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  /* @apply bg-zinc-800; */
+  @apply bg-[#09090A] text-zinc-100;
+}
